tdf#104640, tdf#108469: Insert image where the cursor is

Partially revert 72a4987434368bfb0b15f5ebb70a52
Besides, add bDelta to the condition so the statement is false
if the image is resized

Change-Id: Ib07d328e040c38c63a30f6230ed9f6b605d76d9f
Reviewed-on: https://gerrit.libreoffice.org/38705
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit 3919d87210ea12ed3166c649ac52730026db01a4)